# my-coding-agent

./: .gitignore  README.md  pyproject.toml
.github/agents/: commit-agent.agent.md
.github/workflows/: background-automation.yml
automation/: __init__.py  agents.py  ai.py  attachments.py  copilot.py  email.py  github.py  http_client.py  models.py  orchestrator.py  trello.py
docs/: technical-implementation-and-deployment.md
tests/: test_orchestrator.py
